doc: fix left nav color contrast
I believe this is the last change to make in the docs for color contrast
accessibility per WCAG AA.

Currently, the current item in the nav is #43853d on a #333333
background for a color contrast of 2.8:1, failing WCAG AA. This swaps in
removes a confusing bottom border on the item, replacing it with
bolding to preserve the item's highlighting.

PR-URL: https://github.com/nodejs/node/pull/35141

--- a/doc/api_assets/style.css
+++ b/doc/api_assets/style.css
@@ -539,9 +539,8 @@ a code {
 #column2 ul li a.active,
 #column2 ul li a.active:hover,
 #column2 ul li a.active:focus {
-  color: #43853d;
-  border-radius: 0;
-  border-bottom: 1px solid #43853d;
+  font-weight: 700;
+  color: #fff;
   background-color: transparent;
 }
 
